--- a/index.html
+++ b/index.html
@@ -362,16 +362,20 @@
                 try {
                     const map = L.map(mapContainerRef.current, {
                         zoomControl: false,
-                        attributionControl: false
+                        attributionControl: true
                     }).setView([38.5, 26.0], 5);
 
-                    L.tileLayer('https://{s}.basemaps.cartocdn.com/rastertiles/voyager/{z}/{x}/{y}{r}.png', {
-                        attribution: '&copy; OpenStreetMap',
-                        maxZoom: 19
+                    // 使用 OpenStreetMap 官方 tile (更穩定)
+                    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+                        maxZoom: 19,
+                        crossOrigin: true
                     }).addTo(map);
 
                     L.control.zoom({ position: 'topright' }).addTo(map);
                     mapInstanceRef.current = map;
+                    
+                    console.log('Map initialized successfully');
                 } catch (e) {
                     console.error("Map Init Error:", e);
                 }
