--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
             Eye: () => <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"/><circle cx="12" cy="12" r="3"/></svg>,
             History: () => <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/><path d="M12 7v5l4 2"/></svg>,
             Clock: () => <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>,
-            User: () => <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
+            User: () => <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>,
+            ChevronUp: () => <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><polyline points="18 15 12 9 6 15"/></svg>,
+            ChevronDown: () => <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><polyline points="6 9 12 15 18 9"/></svg>
         };
 
         // --- Data: 2026/02/01 - 02/16 ---
@@ -211,7 +213,8 @@
                 spots: [
                     { name: "Delphi", coords: [38.4801, 22.5012], desc: "阿波羅神殿遺跡" },
                     { name: "Arachova", coords: [38.4800, 22.5866], desc: "羊絨製品、午餐" },
-                    { name: "雅典 Airbnb", coords: [37.9838, 23.7275], desc: "市區停車入住" }
+                    { name: "雅典 Airbnb", coords: [37.9838, 23.7275], desc: "市區停車入住" },
+                    { name: "國家希臘劇院", coords: [37.9848, 23.7254], desc: "看現代舞劇" }
                 ]
             },
             {
@@ -286,7 +289,8 @@
                 color: "bg-blue-600",
                 spots: [
                     { name: "憲法廣場", coords: [37.9755, 23.7364], desc: "衛兵交接" },
-                    { name: "普拉卡區", coords: [37.9734, 23.7298], desc: "Plaka" }
+                    { name: "普拉卡區", coords: [37.9734, 23.7298], desc: "Plaka" },
+                    { name: "城市導覽", coords: [37.9733, 23.7338], desc: "" }
                 ]
             },
             {
@@ -301,7 +305,8 @@
                 color: "bg-blue-600",
                 spots: [
                     { name: "國立考古博物館", coords: [37.9891, 23.7326], desc: "National Archaeological Museum" },
-                    { name: "利卡維多斯山", coords: [37.9819, 23.7431], desc: "Lycabettus Hill" }
+                    { name: "利卡維多斯山", coords: [37.9819, 23.7431], desc: "Lycabettus Hill" },
+                    { name: "金工體驗", coords: [37.9757, 23.7307], desc: "Design and fashion jewelry with a Silversmith" }
                 ]
             },
             {
@@ -635,6 +640,18 @@
                 setItinerary(prev => prev.map(item => {
                     if (item.id === dayId) {
                         const newSpots = item.spots.filter((_, idx) => idx !== spotIndex);
+                        return { ...item, spots: newSpots };
+                    }
+                    return item;
+                }));
+            };
+            const moveSpot = (dayId, spotIndex, direction) => {
+                setItinerary(prev => prev.map(item => {
+                    if (item.id === dayId) {
+                        const newSpots = [...item.spots];
+                        const targetIndex = direction === 'up' ? spotIndex - 1 : spotIndex + 1;
+                        if (targetIndex < 0 || targetIndex >= newSpots.length) return item;
+                        [newSpots[spotIndex], newSpots[targetIndex]] = [newSpots[targetIndex], newSpots[spotIndex]];
                         return { ...item, spots: newSpots };
                     }
                     return item;
@@ -1025,6 +1042,8 @@
                                                                     <div className="flex items-center justify-between">
                                                                         <span className="text-[10px] text-slate-400 font-mono">{spot.coords ? `${spot.coords[0]}, ...` : '-'}</span>
                                                                         <div className="flex gap-1">
+                                                                            <button onClick={(e) => { e.stopPropagation(); moveSpot(item.id, sIdx, 'up'); }} disabled={sIdx === 0} className="text-[10px] bg-white border border-slate-300 px-1.5 py-0.5 rounded hover:text-blue-600 disabled:opacity-30 disabled:cursor-not-allowed" title="上移"><Icons.ChevronUp /></button>
+                                                                            <button onClick={(e) => { e.stopPropagation(); moveSpot(item.id, sIdx, 'down'); }} disabled={sIdx === item.spots.length - 1} className="text-[10px] bg-white border border-slate-300 px-1.5 py-0.5 rounded hover:text-blue-600 disabled:opacity-30 disabled:cursor-not-allowed" title="下移"><Icons.ChevronDown /></button>
                                                                             <button onClick={(e) => { e.stopPropagation(); startPicking(item.id, sIdx); }} className="text-[10px] bg-white border border-slate-300 px-1.5 py-0.5 rounded hover:text-blue-600">📍</button>
                                                                             <button onClick={() => removeSpot(item.id, sIdx)} className="text-[10px] bg-white border border-slate-300 px-1.5 py-0.5 rounded hover:text-red-600"><Icons.Trash /></button>
                                                                         </div>
